# EventRacer

./: LICENSE  README.md  build.sh
src/: .cproject  .project  CMakeLists.txt
src/base/: CMakeLists.txt  file.cpp  file.h  mutex.h  system_error.h
src/eventracer/filters/: CMakeLists.txt  RaceTags.cpp  RaceTags.h
src/eventracer/input/: ActionLog.cpp  ActionLog.h  CMakeLists.txt  StringSet.cpp  StringSet.h
src/eventracer/races/: BitClocks.cpp  BitClocks.h  CMakeLists.txt  EventGraph.cpp  EventGraph.h  ThreadMapping.cpp  ThreadMapping.h  VarsInfo.cpp  VarsInfo.h
src/eventracer/tool/: CMakeLists.txt  RaceStats.cpp  RaceStats.h  RaceStatsMain.cpp
src/eventracer/trialwebapp/: BrowserRunner.cpp  BrowserRunner.h  CMakeLists.txt  WebRaceAnalyzer.cpp
src/eventracer/util/: CMakeLists.txt  CallTraceBuilder.cpp  CallTraceBuilder.h  EventGraphInfo.cpp  EventGraphInfo.h  GraphFix.cpp  GraphFix.h  TimerGraph.cpp  TimerGraph.h
src/eventracer/webapp/: ActionLogPrint.cpp  ActionLogPrint.h  CMakeLists.txt  EventGraphViz.cpp  EventGraphViz.h  GraphViz.cpp  GraphViz.h  HTMLTable.cpp  HTMLTable.h  JsViewer.cpp  JsViewer.h  RaceAnalyzerMain.cpp  RaceApp.cpp  RaceApp.h  mongoose.c
src/eventracer/webera/: CMakeLists.txt  RunSchedules.cpp  TraceReorder.cpp  TraceReorder.h  WebERAMain.cpp
src/online/: CMakeLists.txt  VCRaceDetector.cpp  VCRaceDetector.h  VCRaceDetectorTest.cpp
src/util/: CMakeLists.txt  Escaping.cpp  Escaping.h  UrlEncoding.cpp  UrlEncoding.h
